Agendar consulta con hora

--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -1885,10 +1885,10 @@ button {
     }
 
     .logo-mobile {
-      width: 100%;
+      width: 40px;
       height: 100%;
       background: url($logo-path-mobile) no-repeat;
-      background-position: center center;
+      background-size: cover;
     }
 
     @include respond-below(sm) {
